Turn off autocomplete for inputs

--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -14,5 +14,5 @@
         </div>
     </form>
 
-    <img style="max-height: 100%; max-width: 100%;" src="/graph" />
+    <img style="max-height: 100%; max-width: 100%;" src="/graph" alt="Create a graph using the options on the left" />
 </div>
