--- a/src/templates/sidebar_form.html
+++ b/src/templates/sidebar_form.html
@@ -37,13 +37,13 @@
                 +
             </span>
         </div>
-        <input type="text" class="form-control" placeholder="From..." name="newedgefrom">
+        <input autocomplete="off" type="text" class="form-control" placeholder="From..." name="newedgefrom">
         <div class="input-group-append">
             <span class="input-group-text" style="font-family: monospace;">
                 {% include "icons.html" with icon="right_arrow" %}
             </span>
         </div>
-        <input type="text" class="form-control" placeholder="To..." name="newedgeto">
+        <input autocomplete="off" type="text" class="form-control" placeholder="To..." name="newedgeto">
         <div class="input-group-append">
             <input class="btn btn-outline-primary" type="submit" value="Add" name="addEdge" />
         </div>
@@ -70,7 +70,7 @@
                 +
             </span>
         </div>
-        <input type="text" class="form-control" placeholder="New node" name="newNode">
+        <input autocomplete="off" type="text" class="form-control" placeholder="New node" name="newNode">
         <div class="input-group-append">
             <input class="btn btn-outline-primary" type="submit" value="Add" name="addNode" />
         </div>
