--- a/src/templates/sidebar_form.html
+++ b/src/templates/sidebar_form.html
@@ -44,6 +44,7 @@
             </span>
         </div>
         <input autocomplete="off" type="text" class="form-control" placeholder="To..." name="newedgeto">
+        <input autocomplete="off" type="text" class="form-control" placeholder="Weight..." name="newedgeweight">
         <div class="input-group-append">
             <input class="btn btn-outline-primary" type="submit" value="Add" name="addEdge" />
         </div>
