--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -1,3 +1,14 @@
+<style>
+    .graph-wrapper {
+        height: 100%;
+        align-self: stretch;
+    }
+
+    .graph-wrapper > * {
+        height: 100% !important;
+    }
+</style>
+
 <div class="graphView">
     {% if misc.upload_open %}
     {% include 'upload_base.html' %}
@@ -14,5 +25,10 @@
         </div>
     </form>
 
-    <img style="max-height: 100%; max-width: 100%;" src="/graph" alt="Create a graph using the options on the left" />
+    <div class="graph-wrapper">
+        {%load plotly_dash%}
+        {%plotly_app name="dash_graph" %}
+    </div>
+
+    <!-- <img style="max-height: 100%; max-width: 100%;" src="/graph" alt="Create a graph using the options on the left" /> -->
 </div>
