--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -59,6 +59,7 @@
 
         .graphView {
             height: 100%;
+            flex-grow: 1;
             padding: 0 32px;
             display: flex;
             flex-flow: column nowrap;
