--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -5,7 +5,8 @@
     }
 
     .graph-wrapper > * {
-        height: 100% !important;
+        margin-top: 64px;
+        height: calc(100% - 64px) !important;
     }
 </style>
 
