minor node add/edit error case handling -DG

--- a/src/templates/sidebar_context.html
+++ b/src/templates/sidebar_context.html
@@ -3,7 +3,7 @@
 {% block node_loop %}
 
 {% if nodes|length == 0 %}
-    <p style="font-family: monospace;" class="mb-0">There aren't any ports >:(</p>
+    <p style="font-family: monospace;" class="mb-0">There aren't any nodes >:(</p>
 {% endif %}
 
 {% for node in nodes %}
