basic shortest path implemented -DG

--- a/src/templates/sidebar_base.html
+++ b/src/templates/sidebar_base.html
@@ -1,7 +1,7 @@
 <div class="sidenav container">
     <div class="sideTitle">
         <h1>
-            Sample Graph 1 Info
+            Network Graph Info
         </h1>
         <span class="badge badge-pill badge-primary">
             {% block graph_type %}
