error reporting gets lost in session, since graph renders after sidebar -DG

--- a/src/templates/sidebar_form.html
+++ b/src/templates/sidebar_form.html
@@ -48,6 +48,10 @@
             {% block path_loop %} {% endblock %}
         </div>
     </div>
+    {% if 'Path Drawn: ' not in path_error %}
+        <div class="text-danger">
+        </div>
+    {% endif %}
 </div>
 
 <!-- Now edges -->
