node upload added to FE and plumbed in BE -DG

--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -8,7 +8,8 @@
         <div class="btn-group"
              role="group"
         >
-            <button type="submit" name="open-upload" value="yee" class="btn btn-primary">Upload File</button>
+            <button type="submit" name="open-upload" value="nodes" class="btn btn-primary">Upload Nodes</button>
+            <button type="submit" name="open-upload" value="edges" class="btn btn-primary">Upload Edges</button>
             <a type="button" class="btn btn-primary" href="/download.csv" download="network_graph.csv">Download File</a>
             <button name="clear" value="Clear" type="submit" class="btn btn-primary">Clear</button>
         </div>
