testing interactive merge -DG

--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -8,6 +8,10 @@
         margin-top: 64px;
         height: calc(100% - 64px) !important;
     }
+
+    .top-fixed {
+        z-index: 2;
+    }
 </style>
 
 <div class="graphView">
