make node upload work with crlf and lf

--- a/src/templates/upload_base.html
+++ b/src/templates/upload_base.html
@@ -29,7 +29,7 @@
 
 <div class="top-fixed upload-form">
     <div class="header">
-        <h3>Upload CSV</h3>
+        <h3>Upload CSV ({{ file_content }})</h3>
         <span class="spacer"></span>
         <form method="POST" action="/">
             {% csrf_token %}
